# PWR_Checkers

./: CMakeLists.txt  README.md
include/: Board.h  Game.h  MinMaxAlgorithm.h  Move.h
src/: Board.cpp  Game.cpp  MinMaxAlgorithm.cpp
